[package]
name = "eyepiece"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
colorous = "1.0.8"
geotrans = "0.2.2"
image = "0.24.5"
indicatif = "0.17.2"
log = "0.4.17"
num-complex = "0.4.2"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_seeder = "0.2.3"
rustfft = "6.1.0"
skyangle = { version = "0.2.0", path = "../skyangle" }
