[package]
name = "eyepiece"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A crate to generate star fields as seen with different telescopes"
repository = "https://github.com/rconan/eyepiece"
documentation = "https://docs.rs/eyepiece"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]

[dependencies]
anyhow = "1.0.66"
colorous = "1.0.8"
geotrans = "0.2.2"
image = "0.24.5"
indicatif = "0.17.2"
log = "0.4.17"
num-complex = "0.4.2"
num-traits = "0.2.15"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_seeder = "0.2.3"
rustfft = "6.1.0"
skyangle = "0.2.0"
