[workspace]
members = ["api", "mast"]

[workspace.package]
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2021"
license = "MIT"
description = "A crate to generate star fields as seen with different telescopes"
repository = "https://github.com/rconan/eyepiece"
documentation = "https://docs.rs/eyepiece"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]

[workspace.dependencies]
skyangle = { version = "0.2.2", path = "../skyangle" }
num-complex = "0.4.2"
indicatif = "0.17.2"
anyhow = "1.0.66"
serde = { version = "1.0.151", features = ["derive"] }
env_logger = "0.10.0"
clap = { version = "4.0.32", features = ["derive"] }
