[package]
name = "eyepiece"
version = "0.4.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
anyhow = "1.0.66"
colorous = "1.0.8"
geotrans = "0.2.2"
image = "0.24.5"
indicatif = "0.17.2"
log = "0.4.17"
num-complex = "0.4.2"
num-traits = "0.2.15"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_seeder = "0.2.3"
rustfft = "6.1.0"
skyangle.workspace = true

[dev-dependencies]
env_logger = "0.10.0"
