[package]
name = "ifu"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "GMT MANIFEST IFU Model"
repository.workspace = true
documentation.workspace = true
readme = "README.md"
categories.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
eyepiece.workspace = true
image = "0.24.6"
skyangle.workspace = true
