[package]
name = "mast-eyepiece"
version = "0.1.0"
edition = "2021"


[dependencies]
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
skyangle.workspace = true
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4.2"
