[package]
name = "mast-eyepiece"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
reqwest = { version = "0.11.13", features = ["json"] }
serde.workspace = true
serde_json = "1.0.91"
skyangle.workspace = true
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["full"] }
eyepiece = { path = "../api" }
anyhow.workspace = true
indicatif.workspace = true
env_logger.workspace = true
clap.workspace = true

[dev-dependencies]
tokio-test = "0.4.2"

[features]
parallel = ["eyepiece/parallel"]
